# ChatPDF

./: README.md  requirements.txt
chat_pdf/: README.md  pyproject.toml
chat_pdf/src/chat_pdf/: crew.py  main.py
chat_pdf/src/chat_pdf/config/: agents.yaml  tasks.yaml
